# truenas_pylibvirt

./: .gitignore  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: mypy.yml  ruff.yml  unit_tests.yml
debian/: changelog  control  debhelper-build-stamp  files  python3-truenas-pylibvirt.manpages  python3-truenas-pylibvirt.postinst.debhelper  python3-truenas-pylibvirt.prerm.debhelper  rules
debian/python3-truenas-pylibvirt/DEBIAN/: control  md5sums  postinst  prerm
debian/python3-truenas-pylibvirt/usr/lib/python3/dist-packages/truenas_pylibvirt/: __init__.py  error.py
debian/python3-truenas-pylibvirt/usr/lib/python3/dist-packages/truenas_pylibvirt/device/: counters.py  storage.py
debian/python3-truenas-pylibvirt/usr/lib/python3/dist-packages/truenas_pylibvirt/domain/: managers.py
debian/python3-truenas-pylibvirt/usr/lib/python3/dist-packages/truenas_pylibvirt/domain/base/: domain.py
debian/python3-truenas-pylibvirt/usr/lib/python3/dist-packages/truenas_pylibvirt/domain/container/: xml.py
tests/: conftest.py  test_is_no_domain_error.py  test_runtime.py
tests/device/: test_cdrom.py  test_display.py  test_filesystem.py  test_gpu.py  test_nic.py  test_pci.py  test_storage.py  test_usb.py
tests/domain/: test_container_idmap.py  test_start_validator.py  test_vm_xml.py
tests/utils/: test_gpu_critical.py  test_gpu_pci_structures.py  test_ovmf.py  test_pci.py
truenas_pylibvirt/: __init__.py  __main__.py  error.py  runtime.py  xml.py
truenas_pylibvirt/device/: __init__.py  base.py  cdrom.py  counters.py  delegate.py  display.py  filesystem.py  gpu.py  gpu_utils.py  manager.py  nic.py  pci.py  storage.py  usb.py  utils.py
truenas_pylibvirt/domain/: manager.py  managers.py  start_validator.py
truenas_pylibvirt/domain/base/: configuration.py  domain.py  xml.py
truenas_pylibvirt/domain/container/: configuration.py  domain.py  xml.py
truenas_pylibvirt/domain/vm/: configuration.py  domain.py  xml.py
truenas_pylibvirt/libvirtd/: connection.py  connection_manager.py  service_delegate.py
truenas_pylibvirt/nsexec/: __init__.py  __main__.py  _native.c  _native.pyi  _runner.py  cli.py
truenas_pylibvirt/utils/: __init__.py  cpu.py  gpu.py  iommu.py  ovmf.py  pci.py  usb.py
